--- a/template.html
+++ b/template.html
@@ -12,6 +12,10 @@
 		<link href="./assets/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
+		<nav>
+			<img src="./assets/icon.ico" width="32" height="32" />
+			<a class="nohighlight" href="/"><h2>TomatenKuchen Docs</h2></a>
+		</nav>
 		{CONTENT}
 	</body>
 </html>
