--- a/template.html
+++ b/template.html
@@ -13,8 +13,10 @@
 	</head>
 	<body>
 		<nav>
-			<img src="./assets/icon.ico" width="32" height="32" />
-			<a class="nohighlight" href="/"><h2>TomatenKuchen Docs</h2></a>
+			<div style="display: flex;">
+				<img src="./assets/icon.ico" width="48" height="48" />
+				<a href="/"><h2 class="nohighlight">TomatenKuchen Docs</h2></a>
+			</div>
 		</nav>
 		{CONTENT}
 	</body>
