--- a/template.html
+++ b/template.html
@@ -13,9 +13,13 @@
 	</head>
 	<body>
 		<nav>
-			<div style="display: flex;">
-				<img src="./assets/icon.ico" width="48" height="48" />
-				<a href="/"><h2 class="nohighlight">TomatenKuchen Docs</h2></a>
+			<div style="display: flex; ">
+				<img style="padding-top: 32px;" src="./assets/icon.ico" width="64" height="64" />
+				<h2><a class="nohighlight" href="/">TomatenKuchen Docs</a></h2>
+				<ul style="right: 0;">
+					<li><a class="nohighlight" href="https://tomatenkuchen.eu/discord">Support</a></li>
+					<li><a class="nohighlight" href="https://tomatenkuchen.eu/">Website</a></li>
+				</ul>
 			</div>
 		</nav>
 		{CONTENT}
