add search files

--- a/template.html
+++ b/template.html
@@ -10,6 +10,8 @@
 		<link href="./assets/icon.ico" rel="icon" type="image/x-icon"/>
 
 		<link href="./assets/style.css" rel="stylesheet" type="text/css">
+
+		<script src="./assets/search.js"></script>
 	</head>
 	<body>
 		<nav>
