--- a/template.html
+++ b/template.html
@@ -15,9 +15,14 @@
 	</head>
 	<body>
 		<nav>
-			<div style="display: flex;">
-				<img src="./assets/icon.ico" width="64" height="64" />
-				<h2><a class="nohighlight" href="/">TomatenKuchen Docs</a></h2>
+			<div style="display: flex; margin: 10px;">
+				<a class="nohighlight" href="/">
+					<img src="./assets/icon.ico" width="64" height="64" />
+					<h2>TomatenKuchen Docs</h2>
+				</a>
+				<center>
+					<input type="text" id="search" placeholder="Suche..." onkeyup="search(this.value)" />
+				</center>
 				<ul class="nav-ul">
 					<li><a class="nohighlight" href="https://tomatenkuchen.eu/discord">Support</a></li>
 					<li><a class="nohighlight" href="https://tomatenkuchen.eu/">Website</a></li>
