--- a/template.html
+++ b/template.html
@@ -16,10 +16,9 @@
 	<body>
 		<nav>
 			<div style="display: flex; margin: 10px;">
-				<a class="nohighlight" href="/">
-					<img src="./assets/icon.ico" width="64" height="64" />
-					<h2>TomatenKuchen Docs</h2>
-				</a>
+				<a class="nohighlight" href="/"><img src="./assets/icon.ico" width="64" height="64" /></a>
+				<h2><a class="nohighlight" href="/">TomatenKuchen Docs</a></h2>
+
 				<ul class="nav-ul">
 					<li><a class="nohighlight" href="https://tomatenkuchen.eu/discord">Support</a></li>
 					<li><a class="nohighlight" href="https://tomatenkuchen.eu/">Website</a></li>
