--- a/template.html
+++ b/template.html
@@ -26,7 +26,9 @@
 			</div>
 			<center>
 				<input type="text" id="search" placeholder="Suche..." onkeyup="search(this.value)" />
+				<div id="dropdown"></div>
 			</center>
+			<br>
 		</nav>
 		{CONTENT}
 	</body>
