--- a/template.html
+++ b/template.html
@@ -26,7 +26,7 @@
 			</div>
 			<center>
 				<input type="text" id="search" placeholder="Suche..." onkeyup="search(this.value)" />
-				<div id="dropdown"></div>
+				<div id="dropdown" style="display: none;"></div>
 			</center>
 			<br>
 		</nav>
