--- a/template.html
+++ b/template.html
@@ -20,6 +20,8 @@
 				<h2><a class="nohighlight" href="/">TomatenKuchen Docs</a></h2>
 			</div>
 			<ul class="nav-ul">
+				<li><button>Sprache wechseln</button></li>
+				<li><button>White/Darkmode</button></li>
 				<li><a class="nohighlight" href="https://tomatenkuchen.eu/">Website</a></li>
 				<li><a class="nohighlight" href="https://tomatenkuchen.eu/discord">Support</a></li>
 			</ul>
