--- a/template.html
+++ b/template.html
@@ -12,16 +12,17 @@
 		<link href="./assets/style.css" rel="stylesheet" type="text/css">
 
 		<script src="./assets/search.js"></script>
+		<script src="https://tomatenkuchen.eu/assets/js/cookie.js"></script>
 	</head>
-	<body>
+	<body class="dark-theme">
 		<nav>
 			<div style="display: flex; margin: 15px;">
 				<a class="nohighlight" href="/"><img src="./assets/icon.ico" width="64" height="64" /></a>
 				<h2><a class="nohighlight" href="/">TomatenKuchen Docs</a></h2>
 			</div>
 			<ul class="nav-ul">
-				<li><button>Sprache wechseln</button></li>
-				<li><button>White/Darkmode</button></li>
+				<li><button onclick="toggleLang()">Sprache wechseln</button></li>
+				<li><button onclick="toggleTheme()">White/Darkmode</button></li>
 				<li><a class="nohighlight" href="https://tomatenkuchen.eu/">Website</a></li>
 				<li><a class="nohighlight" href="https://tomatenkuchen.eu/discord">Support</a></li>
 			</ul>
@@ -32,5 +33,20 @@
 			<br>
 		</nav>
 		{CONTENT}
+		<script>
+			const theme = getCookie("theme")
+			if (theme == "light") {
+				document.body.classList.toggle("light-theme")
+				document.body.classList.toggle("dark-theme")
+			}
+			function toggleTheme() {
+				document.body.classList.toggle("light-theme")
+				document.body.classList.toggle("dark-theme")
+
+				const oldtheme = getCookie("theme")
+				if (oldtheme == "light") setCookie("theme", "dark", 60)
+				else setCookie("theme", "light", 60)
+			}
+		</script>
 	</body>
 </html>
