--- a/template.html
+++ b/template.html
@@ -9,6 +9,7 @@
 		<link href="./assets/icon.ico" rel="shortcut icon" type="image/x-icon"/>
 		<link href="./assets/icon.ico" rel="icon" type="image/x-icon"/>
 
+		<link href="https://tomatenkuchen.eu/assets/style.css" rel="stylesheet" type="text/css">
 		<link href="./assets/style.css" rel="stylesheet" type="text/css">
 
 		<script src="./assets/search.js"></script>
@@ -44,8 +45,8 @@
 				document.body.classList.toggle("dark-theme")
 
 				const oldtheme = getCookie("theme")
-				if (oldtheme == "light") setCookie("theme", "dark", 60)
-				else setCookie("theme", "light", 60)
+				if (oldtheme == "light") setCookie("theme", "dark", 60, true)
+				else setCookie("theme", "light", 60, true)
 			}
 		</script>
 	</body>
