--- a/template.html
+++ b/template.html
@@ -12,7 +12,7 @@
 		<link href="https://tomatenkuchen.eu/assets/style.css" rel="stylesheet" type="text/css">
 		<link href="./assets/style.css" rel="stylesheet" type="text/css">
 
-		<script src="./assets/search.js"></script>
+		<script src="./assets/main.js"></script>
 		<script src="https://tomatenkuchen.eu/assets/js/cookie.js"></script>
 	</head>
 	<body class="dark-theme">
@@ -33,20 +33,14 @@
 			</center>
 			<br>
 		</nav>
-		{CONTENT}
+		<div class="content">
+			{CONTENT}
+		</div>
 		<script>
 			const theme = getCookie("theme")
 			if (theme == "light") {
 				document.body.classList.toggle("light-theme")
 				document.body.classList.toggle("dark-theme")
-			}
-			function toggleTheme() {
-				document.body.classList.toggle("light-theme")
-				document.body.classList.toggle("dark-theme")
-
-				const oldtheme = getCookie("theme")
-				if (oldtheme == "light") setCookie("theme", "dark", 60, true)
-				else setCookie("theme", "light", 60, true)
 			}
 		</script>
 	</body>
