--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
 	<body class="dark-theme">
 		<nav>
 			<div style="display: flex; margin: 15px;">
-				<a class="nohighlight" href="/"><img src="./assets/icon.ico" width="64" height="64" /></a>
+				<a class="nohighlight" href="/"><img src="./assets/icon.ico" width="64" height="64" alt="Icon" /></a>
 				<h2><a class="nohighlight" href="/">TomatenKuchen Docs</a></h2>
 			</div>
 			<ul class="nav-ul">
