Better style + search

--- a/template.html
+++ b/template.html
@@ -28,7 +28,7 @@
 				<li><a class="nohighlight" href="https://tomatenkuchen.eu/discord">Support</a></li>
 			</ul>
 			<center>
-				<input type="text" id="search" placeholder="Suche..." onkeyup="search()" />
+				<input type="text" id="search" placeholder="Suche..." onfocus="search()" onkeyup="search()" />
 				<div id="dropdown" style="display: none;"></div>
 			</center>
 			<br>
