--- a/template.html
+++ b/template.html
@@ -15,7 +15,7 @@
 		<script src="./assets/main.js"></script>
 		<script src="https://tomatenkuchen.eu/assets/js/cookie.js"></script>
 	</head>
-	<body class="dark-theme">
+	<body class="dark-theme" {BODYDATA}>
 		<nav>
 			<div style="display: flex; margin: 15px;">
 				<a class="nohighlight" href="/"><img src="./assets/icon.ico" width="64" height="64" alt="Icon" /></a>
