--- a/template.html
+++ b/template.html
@@ -13,7 +13,7 @@
 		<link href="./assets/style.css" rel="stylesheet" type="text/css">
 
 		<script src="./assets/main.js"></script>
-		<script src="https://tomatenkuchen.eu/assets/js/cookie.js"></script>
+		<script src="https://tomatenkuchen.eu/assets/js/script.js"></script>
 	</head>
 	<body class="dark-theme" {BODYDATA}>
 		<nav>
