Really fix cards + fix filter cards error

--- a/template.html
+++ b/template.html
@@ -14,7 +14,7 @@
 
 		<script src="./assets/main.js"></script>
 	</head>
-	<body class="dark-theme" {BODYDATA}>
+	<body class="dark-theme">
 		<nav>
 			<div style="display: flex; margin: 15px;">
 				<a class="nohighlight" href="/"><img src="./assets/icon.ico" width="64" height="64" alt="Icon" /></a>
